--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>fanclub</title>
+  <title>concerts</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -15,7 +15,7 @@
 
 <body>
 
-  <h1 style="margin-top: 15px;" align="center">Мерч</h1>
+  <h1 style="margin-top: 15px;" align="center">Концерты</h1>
   <hr width="align">
   <br>
   
@@ -30,7 +30,7 @@
         <ul>
           <li><a href="index.html" target="_self">Главная</a></li>
           <li><a href="fanclub.html" target="_self">Записаться в фанклуб</a></li>
-          <li><a href="shop.html" target="_self"><u>Купить мерч</u></a></li>
+          <li><a href="shop.html" target="_self"><u>Купить билеты на концерт</u></a></li>
         </ul>
       </div>
     </div>
@@ -38,7 +38,7 @@
 </header>
   <br>
 
-  <h3 align="center" style="font-size: 30px;">Здесь представлен мерч из наличия:</h3>
+  <h3 align="center" style="font-size: 30px;">Здесь представлены доступные даты для покупки билета</h3>
 
   <div class="container mt-4">
     <div class="row" id="products-container">
@@ -48,19 +48,11 @@
 
 <div class="container mt-5">
   <div style="border: 1px solid #537f94; padding: 20px;">
-    <h3>Корзина</h3>
-    <div id="cart-items">
-      <!-- товары корзины -->
-    </div>
-    <div id="cart-total" style="margin-top: 10px; font-size: 18px; font-weight: bold;">
-      <!-- общая сумма -->
-    </div>
-    <button onclick="checkout()" style="margin-top: 10px; width: 180px;">
+    <h3>Оформление заказа</h3>
+    <button id="orderButton" onclick="placeOrder()" style="margin-top: 10px; width: 180px;" disabled>
   Оформить заказ
 </button>
-    <button onclick="clearCart()" style="margin-top: 10px; width: 180px;">
-      Очистить корзину
-    </button>
+
   </div>
 </div>
 
