--- a/fanclub.html
+++ b/fanclub.html
@@ -28,7 +28,7 @@
         <ul>
           <li><a href="index.html" target="_self">Главная</a></li>
           <li><a href="fanclub.html" target="_self"><u>Записаться в фанклуб</u></a></li>
-          <li><a href="shop.html" target="_self">Купить мерч</a></li>
+          <li><a href="shop.html" target="_self">Купить билеты на концерт</a></li>
         </ul>
       </div>
     </div>
