--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="index.html" target="_self"><u>Главная</u></a></li>
           <li><a href="fanclub.html" target="_self">Записаться в фанклуб</a></li>
-          <li><a href="shop.html" target="_self">Купить мерч</a></li>
+          <li><a href="shop.html" target="_self">Купить билеты на концерт</a></li>
         </ul>
       </div>
     </div>
